--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         
 <div class="container m-5 p-3" v-if="showHome">
-    <h1>Bizning saytimizda</h1>
+    <h1>Bizning saytimizda eng yaxshi</h1>
      <div id="home-pages">
 
      </div>
